Start of the big rewrite of the original program. Done for now up to time calculations

--- a/Sun Position with Energy Conservation/Sun Position with Energy Conservation.vcxproj
+++ b/Sun Position with Energy Conservation/Sun Position with Energy Conservation.vcxproj
@@ -140,6 +140,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Planet.cpp" />
+    <ClCompile Include="CommonData.cpp" />
+    <ClCompile Include="SystemMassCenter.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CommonData.h" />
+    <ClInclude Include="SystemMassCenter.h" />
+    <ClInclude Include="Planet.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
