--- a/Sun Position with Energy Conservation/Sun Position with Energy Conservation.vcxproj.filters
+++ b/Sun Position with Energy Conservation/Sun Position with Energy Conservation.vcxproj.filters
@@ -21,10 +21,22 @@
     <ClCompile Include="Planet.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="SystemMassCenter.cpp">
+    <ClCompile Include="CommonData.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="CommonData.cpp">
+    <ClCompile Include="Satelite.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="Sun.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="SystemCenter.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="SystemSimulation.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
+    <ClCompile Include="User.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
   </ItemGroup>
@@ -32,11 +44,26 @@
     <ClInclude Include="Planet.h">
       <Filter>Archivos de origen</Filter>
     </ClInclude>
-    <ClInclude Include="SystemMassCenter.h">
-      <Filter>Archivos de origen</Filter>
-    </ClInclude>
     <ClInclude Include="CommonData.h">
       <Filter>Archivos de origen</Filter>
     </ClInclude>
+    <ClInclude Include="Satelite.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+    <ClInclude Include="Sun.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+    <ClInclude Include="SystemCenter.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+    <ClInclude Include="SystemSimulation.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+    <ClInclude Include="User.h">
+      <Filter>Archivos de origen</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\..\..\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.36.32532\include\chrono" />
   </ItemGroup>
 </Project>
